# rn-batcave

./: .gitignore  README.md  build.gradle.kts  gradle.properties  local.properties  package.json  paths  settings.gradle.kts
batcave/: CMakeLists.txt  batcave.podspec  build.gradle.kts  package.json  settings.gradle.kts
batcave/android/: settings.gradle
batcave/android/app/: build.gradle
batcave/android/app/src/debug/java/com/batcave/: ReactNativeFlipper.java
batcave/android/app/src/main/: AndroidManifest.xml
batcave/android/app/src/main/java/com/batcave/: MainActivity.java  MainApplication.java
batcave/batcave/: settings.gradle
batcave/batcave/app/: build.gradle
batcave/batcave/app/src/main/: AndroidManifest.xml
batcave/batcave/app/src/main/cpp/: native-lib.cpp
batcave/batcave/app/src/main/java/com/myntra/appscore/batcave/: MainActivity.kt
batcave/batcave/app/src/main/res/values/: strings.xml  themes.xml
batcave/batcave/app/src/main/res/values-night/: themes.xml
batcave/batcave/gradle/wrapper/: gradle-wrapper.properties
batcave/batcave/src/main/cpp/: CMakeLists.txt
batcave/batcave/src/main/java/com/myntra/appscore/batcave/: CppInteractor.kt  MainActivity.kt
batcave/ios/: Podfile
batcave/ios/batcave.xcodeproj/: project.pbxproj
batcave/ios/batcaveTests/: batcaveTests.m
batcave/src/androidMain/: AndroidManifest.xml
batcave/src/androidMain/jni/: bifrost.cpp  bifrost.h  bifrost.hpp  native-lib.cpp
batcave/src/androidMain/kotlin/com/myntra/appscore/batcave/: CppAdapter.kt  NativeAdapter.kt  ReactAdapter.kt  TurboKotlin.kt
batcave/src/androidMain/kotlin/com/myntra/appscore/batcave/bridge/: BridgeModule.kt
batcave/src/androidMain/kotlin/com/myntra/appscore/batcave/interop/: HybridObject.kt
batcave/src/commonMain/kotlin/com/myntra/appscore/batcave/: BinaryDataMove.kt  SQL.kt
batcave/src/iosMain/kotlin/com/myntra/appscore/batcave/: JSI.kt  h.kt
batcave/src/jsMain/web-batcave/: package.json
batcave/src/main/: AndroidManifest.xml
batcave/src/main/java/com/myntra/appscore/batcave/: CppInteractor.kt
bifrost/compiler/: Compiler.ts  index.ts  package-lock.json  package.json  tsconfig.json
bifrost/compiler/src/: Compiler.ts
bifrost/compiler/src/codegen/: CPPGenerator.ts  CodeGenerator.ts
bifrost/compiler/src/parser/: Parser.ts
bifrost/compiler/src/types/: index.ts  typeMapper.ts
bifrost/plugin/: build.gradle.kts
contract/: SQL.ts
cpp/android/: bifrost.cpp
cpp/common/: bifrost.h
cpp/ios/: bifrost.cpp
kmm/analytics/: analytics.podspec  build.gradle.kts
kmm/analytics/src/androidMain/: AndroidManifest.xml
kmm/core/: build.gradle.kts  core.podspec
kmm/core/src/androidMain/: AndroidManifest.xml
kmm/database/: build.gradle.kts  database.podspec
kmm/database/database/: 88b0986a7186d029-atomicfu-js-ir.js  database.d.ts  database.js  database.js.map  indexeddb-core.js  indexeddb-core.js.map  indexeddb-external.js  indexeddb-external.js.map  kotlin-kotlin-stdlib-js-ir.js  kotlin-kotlin-stdlib-js-ir.js.map  kotlin-wrappers-kotlin-typescript-js-ir.js  kotlinx-serialization-kotlinx-serialization-core-js-ir.js  kotlinx-serialization-kotlinx-serialization-core-js-ir.js.map  kotlinx.coroutines-kotlinx-coroutines-core-js-ir.js  kotlinx.coroutines-kotlinx-coroutines-core-js-ir.js.map  package.json  sqldelight-runtime-js-ir.js  sqldelight-sqljs-driver-js-ir.js
kmm/database/idb/: entry.module_idb.kt  lib.dom.kt  lib.es2015.iterable.kt  lib.es5.Intl.module_dukat.kt  lib.es5.kt  lib.scripthost.kt  wrap-idb-value.module_idb.kt
kmm/network/: build.gradle.kts  network.podspec
kmm/network/src/androidMain/: AndroidManifest.xml
oldbatcave/src/main/cpp/: CMakeLists.txt  native-lib.cpp
reakt/: package-lock.json  package.json
reakt/reakt-android/: CMakeLists.txt  build.gradle.kts
reakt/reakt-android/src/main/cpp/: CMakeLists.txt  NativeLibrary.h  jniNativeLibrary.cpp  jnijavacpp.cpp  reakt.cpp
reakt/reakt-android/src/main/java/com/myntra/appscore/reakt/: NativeLib.kt  NativeLibraryConfig.java
reakt/reakt-android/src/main/java/com/myntra/appscore/reakt/hybrid/: AndroidHostObject.kt  ReactAndroid.kt
reakt/reakt-cpp/: bifrost.cpp
reakt/reakt-cpp/bifrost/: bifrost.cpp  more_experiments.cpp  native-lib.cpp
scripts/: newPackage.js
src/: SQL.ts
tester/: App.tsx  app.json  index.js  metro.config.js  package-lock.json  package.json  settings.gradle.kts
tester/android/: build.gradle  build.gradle.kts  gradle.properties  settings.gradle.kts
tester/android/app/: build.gradle  build.gradle.backup  build.gradle.kts  proguard-rules.pro
tester/ios/: Podfile
tester/ios/batcave/: AppDelegate.m  AppDelegate.mm
tester/ios/batcave.xcodeproj/: project.pbxproj
(+39 files in other folders)
